# RAUCB

./: .gitignore  README.md  gen_cert.py  makefile
client/: client.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
client/network/: networkmanager.cpp  networkmanager.h
client/security/: client_cert.pem  client_key.pem  encryption.cpp  encryption.h  tlsmanager.cpp  tlsmanager.h
docker/: CMakeLists.txt  cross-compile.sh
server/: app.py  app.sha256  server_cert.pem  server_key.pem
